# ArbitrageFinder

./: .gitignore  Cargo.toml  README.md  logic.py  main.py  requirements.txt
src/: arbs.rs  client.rs  logic.py  main.rs  odds.rs  sports.rs
