[package]
name = "arbitrage_finder"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
futures = "0.3.30"
colored = "2.1.0"
ordered-float = "4.3.0"

[profile.release]
panic = "abort"


[lints.clippy]
pedantic = { level = "warn", priority = -1}
nursery = { level = "warn", priority = -1}
unwrap_used = "warn"
expect_used = "warn"

